# jdevtools

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/jdevtools/: jdevcurl.hpp  jdevrandom.hpp  jdevstring.hpp  sha256hmac.hpp  sha512hmac.hpp
src/: jdevtools.cpp
